--- a/main.css
+++ b/main.css
@@ -9,6 +9,7 @@ body
 {
     background-image: url("./bg_main.png");
     background-size: cover;
+    background-repeat: no-repeat;
 }
 
 
@@ -22,12 +23,12 @@ body
     position: absolute;
     margin-top: 30.5%;
     margin-left: 64.7%;
-    padding: 10px;
+    /* padding: 10px; */
     color:#494848;
     background-color:#5dd782;
     border-radius: 8px;
     border-color:#5dd782;
-    font-size: 30px;
+    font-size: 20px;
    text-decoration: none;
    font-family:Arial, Helvetica, sans-serif;
 } 
