--- a/main.css
+++ b/main.css
@@ -22,8 +22,11 @@ body
 .button{
     position: absolute;
     margin-top: 30.5%;
-    margin-left: 64.7%;
-    /* padding: 10px; */
+    margin-left: 64.6%;
+    padding: 10px;
+    padding-left: 16px;
+    padding-right: 16px;
+    padding-bottom: 12px;
     color:#494848;
     background-color:#5dd782;
     border-radius: 8px;
@@ -31,6 +34,7 @@ body
     font-size: 20px;
    text-decoration: none;
    font-family:Arial, Helvetica, sans-serif;
+ 
 } 
 
 
